--- a/Client/vercel.json
+++ b/Client/vercel.json
@@ -1,5 +1,9 @@
 {
-  "root": "Client",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next"
+  "buildCommand": "cd Client && npm run build",
+  "outputDirectory": "Client/.next",
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "nodejs20.x"
+    }
+  }
 }
